# MHD-BSG

./: .gitignore  README.md  run.py
BSG Des/: des.py  des_decretion.py
BSG Project/: THERMAL_ATTACK_README.md
BSG Project ocpp/: pyproject.toml  requirements.txt
BSG Project ocpp/configs/: anomalies_config.yaml  can_bus_config.yaml  ocpp_config.yaml  v2g_config.yaml
BSG Project ocpp/configs/docs/: DEVELOPMENT.md  GETTING_STARTED.md  INDEX.md  USAGE.md
BSG Project ocpp/src/anomalies/: injector.py
BSG Project ocpp/src/can_bus/: __init__.py  simulator.py
BSG Project ocpp/src/ocpp/: protocol.py
BSG Project ocpp/src/simulator/: main.py
BSG Project ocpp/tests/: charging_simulation_full.py  test_anomalies.py  test_can_bus.py  test_ocpp.py  test_thermal_anomaly.py  test_v2g.py
BSG Project/configs/: simulator_config.yaml
BSG Project/configs/docs/: .gitkeep  API.md  ENVIRONMENT_SETUP.md  PROJECT_INIT.md  QUICKSTART.md  SETUP_SUMMARY.md
BSG Project/examples/: integration_example.py
BSG Project/src/: __init__.py
BSG Project/src/anomalies/: __init__.py
BSG Project/src/ocpp/: __init__.py
BSG Project/src/v2g/: __init__.py  (+1 more)
BSG Project/tests/: conftest.py  test_simulator.py
RSA test/: rsa_demo.py  run_rsa_demo.bat
bsg keygen/: KEY_GENERATION_METHOD_ANALYSIS.md  document.docx  key_generator.py
image_comp/: compress_image.py
lab projeleri/lab1/: lab1.py
lab projeleri/lab2/: lab2-1.py  lab2-2.py
lab projeleri/lab3/: lab3-1.py  lab3-2.py  lab3-3.py  lab3-4.py
lab projeleri/lab4/: Hms.txt  lab4.py
lab projeleri/lab5/: lab5_1.py  mod_hash.txt  orjinal_hash.txt
lab projeleri/lab6/: lab6_1.py
lab projeleri/lab7/: Tasarim_Raporu.md  simple_swap_8.py
secureTunnel/: SECURE_CONNECTION_FLOW.md  key_generator.py  receiver.py  sender.py  unsecureTunnel.py
sim/: ev_charging_sim.py  sample_logs.txt  sample_report.txt  swot_analyzer.py  swot_output_example.json
src/: simulation.py
(+1 files in other folders)
