[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ev-charging-simulator"
version = "0.1.0"
description = "Electric Vehicle Charging Simulation Environment with CAN bus, OCPP, and V2G support"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "EV Security Team"}]
keywords = ["ev", "charging", "can-bus", "ocpp", "v2g", "simulation", "anomaly-detection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "python-can>=4.0",
    "python-socketio>=5.0",
    "aiohttp>=3.8",
    "websockets>=10.0",
    "cryptography>=3.4",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]
web = [
    "flask>=3.0",
    "flask-cors>=4.0",
]
notebook = [
    "jupyter>=1.0",
    "ipython>=8.0",
    "matplotlib>=3.5",
    "pandas>=1.3",
    "numpy>=1.21",
]

[project.urls]
Repository = "https://github.com/yourusername/ev-charging-simulator"
Documentation = "https://github.com/yourusername/ev-charging-simulator/docs"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
